# convex

./: CMakeLists.txt  README.md  convex.pyx  example_tgv_l2.py  example_tv_l2.py  setup.py  test_convex.py
data/densecolumns/: Aeq.csv  beq.csv  f.csv  lb.csv  ub.csv
data/sc50b/: A.csv  Aeq.csv  b.csv
doc/: convex.tex
include/: SparseMatrix.h  TotalVariation.h  denoising.h  eckqmmf.h  ecqmmf.h  linearprogramming.h  morphological.h  onlm.h  ornlm.h  topological.h
proximal/: README.md  setup.py
proximal/proximal/: derivatives.c  derivatives.pxd  derivatives.pyd  derivatives.pyx  total_variation.c  total_variation.pyd  total_variation.pyx
proximal/proximal/tests/: test_total_variation.py
src/: SparseMatrix.cpp  TotalVariation.cpp  denoising.cpp  ecqmmf.cpp  linearprogramming.cpp  onlm.cpp  ornlm.cpp  topological.cpp
